objects/RajShop__c.object
<CustomObject>
    <fields>
        <fullName>RajShopAddress__c</fullName>
        <description>RajShopAddress</description>
        <label>RajShopAddress</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RajShopItems__c</fullName>
        <label>RajShopItems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tshirt</fullName>
                </value>
                <value>
                    <fullName>Shoe</fullName>
                </value>
                <value>
                    <fullName>Tie</fullName>
                </value>
                <value>
                    <fullName>Belt</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RajShopName__c</fullName>
        <description>RajShopName</description>
        <label>RajShopName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>RajShop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RajShop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RajShops</pluralLabel>
    <recordTypes>
        <fullName>RajShopRecordType1</fullName>
        <active>true</active>
        <description>RajShopRecordType1</description>
        <label>RajShopRecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RajShopRecordTypeRajShopReadOnlyRecordType</fullName>
        <active>true</active>
        <description>RajShopReadOnlyRecordType</description>
        <label>RajShopReadOnlyRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>